<resources>
    <string name="app_name">WallpaperTunnel</string>
    <string name="blur">Blur</string>
    <string name="brightness">Brightness</string>
    <string name="horizontal">Set full image as wallpaper</string>
    <string name="setAs">Set As</string>
    <string name="home">home</string>
    <string name="lockscreen">lockscreen</string>
    <string name="homeAndLockscreen"><![CDATA[home & lockscreen]]></string>
    <string name="setAsWallpaper">Set image as wallpaper.</string>
    <string name="finish_blur">Finish blur setting</string>
    <string name="finish_brightness">Finish brightness setting</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="dialog_wallpaper_history">Save wallpapers history?</string>
    <string name="yes">Yes</string>
    <string name="enabled_history_key" translatable="false">enabled_history_key</string>
    <string name="no_permission">Wallpaper history saving cannot work without permission.</string>
    <string name="disabled_history_lacking_permission">Wallpapers History is disabled duo to lacking permission.</string>
    <string name="use_others">Use Other App to Set</string>

    <string name="delete_dialog_title">Delete?</string>
    <string name="delete_dialog_message">Delete %1$s?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>
    <string name="used_wallpaper">Used Wallpaper</string>
    <string name="device_height" translatable="false">device_height</string>
    <string name="device_width" translatable="false">device_width</string>
    <string name="preference_file_key" translatable="false">tunnel_preferences</string>
    <string name="history_activity">Used Wallpapers</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_used_images">Delete all used wallpapers listed here.</string>
    <string name="delete_all_dialog_message">Delete all used wallpapers?</string>
    <string name="no_history">It seems that the history folder is empy, try setting a new wallpaper!</string>
    <string name="apply_to_lockscreen">Apply To Lockscreen</string>
    <string name="apply_to_home">Apply to Home</string>
    <string name="wallpaper_setted">Wallpaper changed.</string>
    <string name="gohome">Go Home</string>
    <string name="cannot_getpermission_lacking_permission">Wallpaper Tunnel cannot get current wallpaper due to lacking permission.</string>
    <string name="cannot_get_livewallpaper">Wallpaper Tunnel cannot process live wallpaper.</string>
    <string name="wallpaper_start" translatable="false">Wallpaper Tunnel</string>
    <string name="photo_picker">Pick Picture</string>
    <string name="lock">lock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome</string>
    <string name="permission_description">To preserve the history of wallpapers, we need to read the current wallpaper of the system. Due to limitations in the Android system, this action requires the following permissions. </string>
    <string name="read_external_storage" translatable="false">READ_EXTERNAL_STORAGE</string>
    <string name="read_media_images" translatable="false">READ_MEDIA_IMAGES</string>
    <string name="media_images_helper">Select \'Allow All Images\'.</string>
    <string name="welcome_media">Allow app to delete media files on device?</string>
    <string name="welcome_system_permission_description">Set this application as the media management app to delete images from wallpaper history without a secondary confirmation.</string>
    <string name="manage_media" translatable="false">MANAGE_MEDIA</string>
    <string name="all_setup">All Setup. Enjoy!</string>
    <string name="manage_external_storage" translatable="false">MANAGE_EXTERNAL_STORAGE</string>
    <string name="permission_got">Permission Got.</string>
    <string name="add_quick_tile">Add Tile</string>
    <string name="finish_settings">Finish initial settings.</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>
    <string name="upscale">Upscale</string>
    <string name="model_name">Choose Model</string>
    <string name="cancel_upscale">Cancel Upscale</string>
    <string name="start_upscale">Start Upscale</string>
    <string name="beta">beta</string>
    <string name="process_speed_might_be_slow">Processing might be slow.</string>
    <string name="paint">Paint</string>
    <string name="color_label">Color Hex</string>
    <string name="zoom">Zoom</string>
    <string name="tile_size">Tile Size</string>
    <string name="fp16">Use FP16</string>
    <string name="cpu_disabled">Disable CPU</string>
    <string name="center">Center</string>
    <string name="crop">Crop</string>
    <string name="setFullAs">Set full image as</string>
</resources>
