<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.UpscaleSettingsFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tile_size">

        <AutoCompleteTextView
            android:id="@+id/choose_tile_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/tile_sizes" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_fp16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fp16"
        android:padding="8dp"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_cpu_disabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpu_disabled"
        android:padding="8dp"/>

</LinearLayout>
</layout>