<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/adjustment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/upscale"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface"
            android:textSize="24sp" />

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:icon="@drawable/ic_lab"
            android:text="@string/beta"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu_choose_model"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/adjustment_title"
            android:hint="@string/model_name">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/model_names" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_upscale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/menu_choose_model"
            app:layout_constraintBottom_toBottomOf="@id/menu_choose_model"
            app:layout_constraintStart_toEndOf="@id/menu_choose_model"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/button_upscale_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/cancel_upscale"
            app:layout_constraintTop_toBottomOf="@id/menu_choose_model" />

        <Button
            android:id="@+id/button_upscale_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/start_upscale"
            app:layout_constraintStart_toEndOf="@id/button_upscale_cancel"
            app:layout_constraintTop_toBottomOf="@id/menu_choose_model"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>